# srx_grpc_v6

./: .gitignore  .gitmodules  CGO_Debugging_Errors  Compile_Running_steps_and_commands  Compile_Running_steps_and_commands_1119_2021  Compile_Running_steps_and_commands_1127_2021  Compile_Running_steps_and_commands_1215_2021  Dockerfile  Makefile  Makefile.in  Making_grpc_service_lib.txt  Note-Calling_Go_Functions_from_Other_Languages_using_C_Shared_Libraries  README-submodule  TODO_devel  VERSIONS  configure  configure.ac  diff_grpc_quagga-srx-github_v614.patch  diff_grpc_srx-server-src_github_v614.patch  make-all-static.sh  make-all.sh  make-patch.sh  make_cscope.sh  srx_grpc_v6.pb.go  srx_grpc_v6.proto  test_result_20200103  test_topology_command
client/: CImple_srx_grpc_client.c  Makefile  get_post_form.html  libsrx_grpc_client.h  srx_grpc_client.go
grpc/: srx_grpc_v6.pb.go  srx_grpc_v6.proto
grpc/client/: srx_grpc_client.go
grpc/server/: srx_grpc_server.go
quagga-srx/: Makefile  config.h.in  configure.ac  make_cscope.sh
quagga-srx/babeld/: Makefile
quagga-srx/bgpd/: Makefile  Makefile.am  bgp_packet.c  bgp_route.c  bgp_route.h  bgp_vty.c  bgpd.c  bgpd.h
server/: CImple_srx_grpc_server.c  CImple_srx_grpc_server_callback.c  Makefile  Makefile.single  libsrx_grpc_server.h  srx_grpc_server.go  srx_grpc_server_callback.go  srx_grpc_server_stream.go
srx-crypto-api/: Makefile  srx_crypto_tester  srxcryptoapi-0.3.0.3.spec  srxcryptoapi-devel-0.3.0.3.spec  srxcryptoapi.conf  srxcryptoapi_lib64.conf
srx-server/: Makefile  make_cscope.sh
(+59 files in other folders)
